--- a/client/assets/styles/_header.styl
+++ b/client/assets/styles/_header.styl
@@ -33,7 +33,6 @@
     font-size 12px
     text-align center
   .header-nav
-    overflow hidden
     text-align right
     ul
       list-style none
@@ -69,15 +68,49 @@
             background $c-teal
             color white
       &.icons li
+        position relative
         width 40px
         &.button
-          margin-right 8px
+          margin-right 16px
           width auto
           button
             display inline-block
             vertical-align middle
           & + .button
             padding-right ($padding / 2)
+        .label
+          background rgba(black, 0.5)
+          border-radius 24px
+          color white
+          font-size 10px
+          font-weight 500
+          left 50%
+          letter-spacing 0.1em
+          line-height 24px
+          opacity 0
+          padding 0 18px
+          pointer-events none
+          position absolute
+          text-transform uppercase
+          transform translateX(-50%)
+          top 30px
+          transition top 200ms ease, opacity 200ms ease
+          z-index 12
+          &:before
+            border-left 4px solid transparent
+            border-right 4px solid transparent
+            border-bottom 4px solid rgba(black, 0.5)
+            content ''
+            height 0
+            left 0
+            margin 0 auto
+            position absolute
+            right 0
+            top -4px
+            width 0
+        a:not(.active):hover .label
+          opacity 1
+          top 35px
       &:not(.icons)
         padding-right ($padding / 2)
         li
