--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -95,6 +95,8 @@ a
     &:after
       background linear-gradient(rgba(white, 0), rgba(white, 1))
       bottom 0
+    &.modal-lg
+      min-width 600px
     .fade-content
       max-height 600px
       overflow auto
