--- a/client/app/new-project/Q1/question.jade
+++ b/client/app/new-project/Q1/question.jade
@@ -38,7 +38,7 @@
             .col.r-col: .related
               span.title RELATED RESEARCH
               ul.list-bullet
-                li(ng-repeat="method in methods") {{method.title}}
+                li(ng-repeat="method in methods", ng-show="method.title") {{method.title}}
                   span.date LAST UPDATED - {{method.updatedAt | date: 'MM/dd/yyyy'}}
           footer.new-project-footer.group
             .pull-left: a.btn.btn-outline(style="opacity: 0.25") BACK
