--- a/client/assets/styles/_auth.styl
+++ b/client/assets/styles/_auth.styl
@@ -44,5 +44,32 @@
         &:hover
           color darken($c-gray, 20%)
   .has-background
-    background $c-gray url("/assets/images/auth.png") no-repeat center right
+    background $c-gray url("/assets/images/auth.jpg") no-repeat center
     background-size cover
+    position relative
+    /*
+    &:before,
+    &:after
+      content ''
+    &:before
+      background-color rgba(black, 0.5)
+      height 100%
+      left 0
+      position absolute
+      top 0
+      width 100%
+      z-index 1
+    &:after
+      align-items center
+      color #FFFFFF
+      content 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in odio urna. Sed facilisis purus quis fringilla cursus. Nullam id odio et urna sollicitudin consectetur quis nec quam.'
+      display flex
+      height 100%
+      justify-content center
+      font-family 'Georgia'
+      font-size 24px
+      font-style italic
+      line-height 32px
+      position relative
+      z-index 2
+    */
