--- a/client/components/direct-quotes/direct-quotes.jade
+++ b/client/components/direct-quotes/direct-quotes.jade
@@ -1,6 +1,6 @@
 .fade-content
   .input-group(prevent:scroll)
-    .modal-header.text-center Add Decisions
+    .modal-header.text-center Add Direct Quotes
     .description Provide a general overview of the project and what compelled this research.
     ol.fields
       li(ng-repeat="quote in project.quotes")
