--- a/client/email/share/style.css
+++ b/client/email/share/style.css
@@ -1,175 +1,171 @@
+/* Client-specific Styles */
+#outlook a {
+  padding: 0;
+}
 
-/* -------------------------------------
-    GLOBAL
-------------------------------------- */
-* {
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-  font-size: 100%;
-  line-height: 1.6em;
+html {
+  height: 100% !important;
+}
+
+body {
+  height: 100% !important;
+  width: 100% !important;
+  margin: 0;
+  padding: 0;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+p {
   margin: 0;
   padding: 0;
 }
 
-img {
-  max-width: 600px;
-  width: auto;
+.ExternalClass {
+  height: 100%;
+  width: 100%;
+}
+.ExternalClass,
+.ExternalClass p,
+.ExternalClass span,
+.ExternalClass font,
+.ExternalClass td,
+.ExternalClass div {
+  line-height: 100%;
 }
 
-body {
-  -webkit-font-smoothing: antialiased;
+.Background {
+  background: #F9F9F9;
   height: 100%;
-  -webkit-text-size-adjust: none;
+  margin: 0;
+  line-height: 100% !important;
   width: 100% !important;
 }
 
-
-/* -------------------------------------
-    ELEMENTS
-------------------------------------- */
-a {
-  color: #348eda;
+.Spacer {
+  min-width: 660px;
+  width: 660px;
 }
 
-.btn-primary {
-  margin: 10px auto;
-  max-width: 200px;
-  width: auto !important;
-}
-
-.btn-primary td {
-  background-color: #2C97DE; 
-  border-radius: 25px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-size: 14px; 
-  text-align: center;
-  vertical-align: top; 
-}
-
-.btn-primary td a {
-  background-color: #348eda;
-  border: solid 1px #348eda;
-  border-radius: 25px;
-  border-width: 10px 20px;
-  display: inline-block;
-  color: #ffffff;
-  cursor: pointer;
-  font-weight: bold;
-  line-height: 2;
-  text-decoration: none;
-}
-
-.last {
-  margin-bottom: 0;
-}
-
-.first {
-  margin-top: 0;
-}
-
-.padding {
-  padding: 10px 0;
-}
-
-
-/* -------------------------------------
-    BODY
-------------------------------------- */
-table.body-wrap {
-  padding: 20px;
-  width: 100%;
-}
-
-table.body-wrap .container {
-  border: 1px solid #f0f0f0;
-}
-
-.quote {
-  background: #eeeeee;
+.Container {
+  background: #FFFFFF;
+  border: 1px solid #E1E6EC;
+  box-shadow: 0px 0px 10px 0px rgba(44, 44, 46, 0.05);
   border-radius: 4px;
-  padding: 10px;
-}
-
-/* -------------------------------------
-    FOOTER
-------------------------------------- */
-table.footer-wrap {
-  clear: both !important;
-  width: 100%;  
-}
-
-.footer-wrap .container p {
-  color: #666666;
-  font-size: 12px;
-  
-}
-
-table.footer-wrap a {
-  color: #999999;
-}
-
-
-/* -------------------------------------
-    TYPOGRAPHY
-------------------------------------- */
-h1, 
-h2, 
-h3 {
-  color: #111111;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 200;
-  line-height: 1.2em;
-  margin: 40px 0 10px;
-}
-
-h1 {
-  font-size: 36px;
-}
-h2 {
-  font-size: 28px;
-}
-h3 {
-  font-size: 22px;
-}
-
-p, 
-ul, 
-ol {
-  font-size: 14px;
-  font-weight: normal;
-  margin-bottom: 10px;
-}
-
-ul li, 
-ol li {
-  margin-left: 5px;
-  list-style-position: inside;
-}
-
-/* ---------------------------------------------------
-    RESPONSIVENESS
------------------------------------------------------- */
-
-/* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
-.container {
-  clear: both !important;
-  display: block !important;
-  Margin: 0 auto !important;
-  max-width: 600px !important;
-}
-
-/* Set the padding on the td rather than the div for Outlook compatibility */
-.body-wrap .container {
-  padding: 20px;
-}
-
-/* This should also be a block element, so that it will fill 100% of the .container */
-.content {
-  display: block;
+  font-family: 'Arial', sans-serif;
   margin: 0 auto;
   max-width: 600px;
+  width: 100%;
 }
 
-/* Let's make sure tables in the content area are 100% wide */
-.content table {
+.HeaderSection {
+  padding: 30px 30px 0;
+}
+
+.TitleSection .TitleLead {
+  font-size: 11px;
+  color: #8A95A1;
+  letter-spacing: 1px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+.TitleSection .Title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #47525D;
+  line-height: 32px;
+}
+
+.QuoteSection {
+  padding: 0 45px;
+}
+.QuoteSection .Quote {
+  background: #FCFDFE;
+  border: 1px solid #F4F5F6;
+  border-radius: 4px;
+  padding: 40px;
   width: 100%;
+}
+.QuoteSection p {
+  opacity: 0.9;
+  font-family: 'Lucida Grande', sans-serif;
+  font-size: 13px;
+  color: #47525D;
+  line-height: 27px;
+  margin: 0 0 10px 0;
+  Margin: 0 0 10px 0;
+}
+
+.FooterSection {
+  padding: 30px 0 45px;
+}
+
+.Image {
+  padding: 20px 20px 40px;
+}
+
+/* End reset */
+img {
+  outline: none;
+  text-decoration: none;
+  -ms-interpolation-mode: bicubic;
+}
+
+a img {
+  border: none;
+}
+
+table {
+  border-spacing: 0;
+  mso-table-lspace: 0pt;
+  mso-table-rspace: 0pt;
+  width: 100%;
+}
+table,
+table td {
+  border-collapse: collapse;
+}
+
+@media screen and (max-width: 680px) {
+  table[class="Container"] {
+    box-shadow: 0 !important;
+    border-radius: 0 !important;
+    max-width: none !important;
+  }
+
+  table[class="Spacer"] {
+    display: none !important;
+  }
+  table[class="Spacer"] img {
+    display: none !important;
+  }
+
+  td[class="HeaderSection"] {
+    padding: 15px 15px 0 !important;
+  }
+
+  p[class="TitleLead"] {
+    font-size: 10px !important;
+  }
+
+  p[class="Title"] {
+    font-size: 20px !important;
+    line-height: 28px !important;
+  }
+
+  td[class="Image"] {
+    padding: 30px !important;
+  }
+
+  td[class="QuoteSection"] {
+    padding: 0 15px !important;
+  }
+
+  td[class="QuoteSection"] [class="Quote"] {
+    padding: 20px !important;
+  }
+
+  td[class="FooterSection"] {
+    padding: 10px 0 45px !important;
+  }
 }
