--- a/client/assets/styles/_header.styl
+++ b/client/assets/styles/_header.styl
@@ -7,7 +7,7 @@
   position fixed
   top 0
   width 100%
-  z-index 10
+  z-index 12
   .header-action,
   .header-title,
   .header-nav,
@@ -30,7 +30,10 @@
   .header-title,
   .header-filter
     flex-grow 3
-    font-size 12px
+    font-family $fn-title
+    font-size 14px
+    font-weight 300
+    letter-spacing 0.025em
     text-align center
   .header-nav
     text-align right
