--- a/client/assets/styles/_vars.styl
+++ b/client/assets/styles/_vars.styl
@@ -11,5 +11,5 @@ $c-icons = #A9B7C8
 
 $fn-primary = "Avenir Next", "Avenir", "Proxima Nova", sans-serif
 $fn-secondary = "Times New Roman", serif
-
+$fn-title = "Gill Sans", "Gill Sans MT", Calibri, sans-serif
 $padding = 20px
