--- a/client/app/project/project.styl
+++ b/client/app/project/project.styl
@@ -1,4 +1,3 @@
-
 .item-label
   left -($padding * 2)
   background #424242
@@ -58,7 +57,14 @@
     .item-description
       opacity 1
       z-index 1
-      
+  &.remove
+    background white !important
+    border 1px solid $c-gray !important
+    color $c-gray !important
+    &:hover
+      background #F22613 !important
+      border-color #F22613 !important
+      color white !important
 .persona
   background white
   border 1px solid $c-light-gray
@@ -179,14 +185,17 @@
     margin 0
   h1
     color $c-blue
-    font normal 30px/42px $fn-primary
+    font 300 30px/42px $fn-title
+    letter-spacing 0.01em
   p
     font normal 16px/20px $fn-primary
-    &.project-cat
-      color #9FACB9
-      font-size 12px
-      letter-spacing 0.125em
-      margin-bottom ($padding / 2)
+  .project-cat
+    color #9FACB9
+    font-size 10px
+    font-family $fn-title
+    letter-spacing 0.15em
+    // margin-bottom ($padding / 4)
+    text-transform uppercase
   hr
     margin ($padding + 10) auto ($padding * 3)
   .attachments li
@@ -198,34 +207,28 @@
 .project-content
   padding 80px 0 65%
   position relative
-  transition opacity 300ms ease
-  white-space pre-line
+  // white-space pre-line
   .project-content_section
-    margin 0 auto 80px
-    p,
-    h3,
-    h2
-      margin 0
     h3
-        display inline-block
-        font 600 16px/24px $fn-primary
-        vertical-align middle
+      display inline-block
+      font 600 16px/24px $fn-primary
+      vertical-align middle
+      width 100%
     h2
-      font 500 20px/20px $fn-primary
-      letter-spacing 0.05em
-      & + p
-        margin ($padding - 10) auto 0
+      font 400 20px/20px $fn-title
+      margin 0
       & > span
         display block
-        color lighten($c-copy, 40%)
-        font-size 12px
-        font-weight 400
-        letter-spacing 0
+        color #8A95A1
+        font-size 15px
+        font-weight 300
+        letter-spacing 0.01em
         line-height 26px
+    h3
+      margin 0
     p
-      font normal 14px/20px $fn-primary
+      font normal 14px/24px $fn-primary
       word-wrap break-word
-      white-space pre-line
     .content
       margin ($padding + 10) 0 0
       ul
@@ -236,10 +239,37 @@
           position relative
           p.note
             color $c-gray
-            font normal 10px/22px $fn-primary
-            letter-spacing 0.075em
+            font 300 12px/20px $fn-title
+            letter-spacing 0.05em
+            margin-top 5px
           &:nth-child(n+2)
-            margin-top 40px
+            margin-top 20px
+          &.add
+            cursor pointer
+            clear both
+            display inline-block
+            float left
+            small
+              color $c-gray
+              cursor pointer
+              display inline-block
+              font 400 10px/10px $fn-title
+              letter-spacing 0.15em
+              vertical-align middle
+            .item-label
+              background transparent
+              border 1px dotted
+              color $c-gray
+              transition background 200ms ease, color 100ms ease
+            &:hover
+              .item-label
+                background $c-blue
+                border-color $c-blue
+                color white
+      &:after
+        content ""
+        display table
+        clear both
     &.project-goal
       ul > li > .item-label
         background-color #A0AEBB
@@ -249,10 +279,10 @@
         margin-top 20px !important
     &.questions-considered
       ul > li
-        p
-          transition height 300ms ease
+        h3
+          margin 0
         .hide
-          height 20px
+          height 24px
           overflow hidden
           text-overflow ellipsis
           white-space pre
@@ -287,16 +317,19 @@
         color $c-blue
         font 600 10px/24px $fn-primary
       span.cat
-        background $c-gray
+        background lighten($c-light-gray, 5%)
+        border 1px solid darken($c-light-gray, 5%)
         border-radius 2px
-        color white
+        color darken($c-gray, 10%)
         display inline-block
-        font-size 10px
-        font-weight 500
-        letter-spacing 0.1em
-        line-height 22px
-        margin-top 8px
-        padding 0 10px
+        font-family $fn-title
+        font-size 11px
+        font-weight 300
+        letter-spacing 0.05em
+        line-height 20px
+        margin-top 5px
+        padding 0 6px
+        // text-transform uppercase
         vertical-align middle
     &.implications
       // min-height 300px
@@ -306,6 +339,7 @@
         border 1px solid $c-light-gray
         border-radius 4px
         box-shadow 0 1px 4px rgba(#3F4E5A, 0.1)
+        margin-left -30px
         padding $padding ($padding + 15)
       ul
         border-bottom 1px solid $c-light-gray
@@ -315,6 +349,7 @@
         & > li
           cursor pointer
           display inline-block
+          font-size 13px
           margin 0
           padding 0 $padding ($padding / 2)
           position relative
@@ -335,9 +370,9 @@
           &:nth-child(n+2)
             margin-top 0
       .tab
-        white-space pre-line
-        padding ($padding + 10) 0 0
+        padding 20px
         position relative
+        z-index 2
         strong
           display block
           font-size 16px
@@ -352,11 +387,12 @@
             // margin-bottom 3px
             line-height 32px
             margin-right 10px
-            vertical-align bottom
-        p
+            position relative
+            top -2px
+            vertical-align middle
+        [contenteditable]
           font-size 14px
-          line-height 22px
-          margin 0 0 $padding
+          line-height 24px
     &.decisions
       ul > li > .item-label
         background transparent
@@ -369,6 +405,7 @@
           text-shadow 0 1px 0 white, 0 2px 0 white, 0 3px 0 white, 0 4px 0 white, 0 5px 0 white, 0 -1px 0 white, 0 -2px 0 white, 0 -3px 0 white, 0 -4px 0 white, 0 -5px 0 white
           top -4px
           vertical-align bottom
+    /*
     &.empty
       position relative
       ul:not(.nav)
@@ -410,9 +447,14 @@
           box-shadow 0 1px 4px rgba(#3F4E5A, .2)
           display inline-block
           padding ($padding + 10)
+    */
     &:nth-child(n+2) .content
       padding-left ($padding + 10)
-
+  h1,
+  h2,
+  p
+    margin 0 auto 5px
+    
 .sidebar
   background-color #F8F9FA
   height 100%
@@ -422,7 +464,7 @@
   right -100%
   top 40px
   // transition right 0.15s ease
-  transition right 400ms ease
+  transition right 400ms ease, opacity 200ms ease
   // transform translateX(100%)
   width 320px
   z-index 11
@@ -430,17 +472,18 @@
     animation ShowSidebar 200ms 1
     right -15px
   .sidebar_section
-    margin-bottom $padding
+    margin-bottom 30px
     .sc_row
       margin ($padding - 5) 0 $padding
     h4
       border-bottom 1px solid $c-icons
-      font normal 14px/32px $fn-primary
+      font 300 15px/30px $fn-title
+      letter-spacing 0.015em
       margin 0
     p.label
       color #9FACB9
-      font 600 10px/10px $fn-primary
-      letter-spacing 0.15em
+      font 500 10px/10px $fn-title
+      letter-spacing 0.125em
       margin 0
     .input-block
       background-color #EFF1F4
@@ -456,13 +499,14 @@
         padding $padding
         position relative
         p
-          font-size 12px
-          line-height 16px
+          font-size 13px
+          line-height 19px
           margin 0
         span.name
           display inline-block
-          font 600 8px/8px $fn-primary
-          letter-spacing 0.15em
+          font 500 9px/9px $fn-title
+          letter-spacing 0.1em
+          opacity 0.5
           text-transform uppercase
           vertical-align bottom
         .ti-close
@@ -481,7 +525,7 @@
       & > li
         display block
         font-size 12px
-        font-weight 500
+        font-weight 400
         line-height 16px
         margin 0 0 ($padding / 2)
         padding-left $padding
@@ -585,6 +629,10 @@
   position fixed
   top 80px
   z-index 9
+  &.fade
+    opacity 0.1
+    &:hover
+      opacity 1
   ul
     list-style none
     margin 0
@@ -1092,11 +1140,10 @@
       display block
       margin-top $padding
       padding-left 0
-    .project-content_section ul li:nth-child(n+2)
-      margin-top ($padding / 2)
-    .project-content_section .quote:nth-child(n+2)
-      margin-top $padding
-    .content ul li span.icon,
+    // .project-content_section ul li:nth-child(n+2)
+      // margin-top ($padding / 2)
+    // .project-content_section .quote:nth-child(n+2)
+      // margin-top $padding
     .content .quote .ti-close,
     .personas .ti-close
       color $c-gray
@@ -1105,14 +1152,21 @@
       top 0
       &:hover
         color $c-copy
-    input + textarea
-      margin-top ($padding / 2)
+    // input + textarea
+      // margin-top ($padding / 2)
     ul.dropdown
       padding 0
   input.form-control,
   textarea.form-control
     padding ($padding / 2)
     transition height 200ms ease
+  span.cat
+    &:hover
+      background rgba(#F8E71C, 0.1) !important
+      border 1px solid rgba(#F8E71C, 0.2) !important
+    &:focus:hover
+      background lighten($c-light-gray, 5%) !important
+      border 1px solid darken($c-light-gray, 5%) !important
 .attachments li
   display inline-block
   margin-bottom ($padding / 2)
@@ -1184,3 +1238,14 @@
     padding-left 0
 .faded
   opacity 0
+  transition 0
+  
+.mce-edit-focus
+  outline 0 !important
+  
+[id^='section-']
+  margin 0 0 50px
+  clearfix()
+  
+h3 span
+  width 100%
